force-app/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <label>Competitor-Global</label>
    <nameField>
        <displayFormat>CM-{YYYY}{MM}-{000000}</displayFormat>
        <label>Competitor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors-Global</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>