force-app/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AAP</fullName>
            </value>
            <value>
                <fullName>Acumed</fullName>
            </value>
            <value>
                <fullName>Aecuaos</fullName>
            </value>
            <value>
                <fullName>Aesculap</fullName>
            </value>
            <value>
                <fullName>Ai-medic</fullName>
            </value>
            <value>
                <fullName>Alpha Consulting Group</fullName>
            </value>
            <value>
                <fullName>Arthrex</fullName>
            </value>
            <value>
                <fullName>Ascension</fullName>
            </value>
            <value>
                <fullName>ASDM</fullName>
            </value>
            <value>
                <fullName>AustoFix</fullName>
            </value>
            <value>
                <fullName>Axomed</fullName>
            </value>
            <value>
                <fullName>B.Braun</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Brehm</fullName>
            </value>
            <value>
                <fullName>Conformis</fullName>
            </value>
            <value>
                <fullName>Corin</fullName>
            </value>
            <value>
                <fullName>DePuy</fullName>
            </value>
            <value>
                <fullName>DeSoutter</fullName>
            </value>
            <value>
                <fullName>DJO/Encore</fullName>
            </value>
            <value>
                <fullName>Emergo Asia Pacific Pty Ltd</fullName>
            </value>
            <value>
                <fullName>Eska</fullName>
            </value>
            <value>
                <fullName>Exactech</fullName>
            </value>
            <value>
                <fullName>GE Healthcare Performance Solutions</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Globus Medical</fullName>
            </value>
            <value>
                <fullName>Health Care Surgical</fullName>
            </value>
            <value>
                <fullName>Hunter &amp; Associates</fullName>
            </value>
            <value>
                <fullName>Implantcast</fullName>
            </value>
            <value>
                <fullName>Implantindustries</fullName>
            </value>
            <value>
                <fullName>JMM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>