force-app/main/default/objects/Competitor__c/fields/Competitor_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Product_Quantity__c</fullName>
    <description>Captures the quantity of product units that the competitor is proposing to sell to the account</description>
    <label>Competitor Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>