force-app/main/default/objects/Competitor__c/fields/Primary_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set automatically by the system - the competitor selected on the sales plan will always be the primary competitor</inlineHelpText>
    <label>Primary Competitor</label>
    <type>Checkbox</type>
</CustomField>