force-app/main/default/objects/Competitor__c/fields/Sales_Plan__c.field-meta.xml
<CustomField>
    <fullName>Sales_Plan__c</fullName>
    <inlineHelpText>Associate the competitor with a sales plan</inlineHelpText>
    <label>Sales Plan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Competitors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>