force-app/main/default/objects/Competitor__c/recordTypes/DN_US_Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Opportunity_Record_Type</fullName>
    <active>true</active>
    <label>DN-US-Opportunity Record Type</label>
</RecordType>