force-app/main/default/objects/Competitor__c/recordTypes/EU_Standard.recordType-meta.xml
<RecordType>
    <fullName>EU_Standard</fullName>
    <active>true</active>
    <description>benutzerdefinierte Opportunity</description>
    <label>EU-Standard</label>
</RecordType>