force-app/main/default/objects/Competitor__c/recordTypes/Global_Generic_Competitor.recordType-meta.xml
<RecordType>
    <fullName>Global_Generic_Competitor</fullName>
    <active>true</active>
    <description>Global Generic Competitor</description>
    <label>Global Generic Competitor</label>
</RecordType>