force-app/main/default/objects/Competitor__c/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>true</active>
    <description>US Recon SPMT used for sales prospects entered in the Distributor Channel</description>
    <label>Sales</label>
</RecordType>